care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/Other_Organisations_Supported__c.object-meta.xml
<CustomObject>
    <label>Other Organisations Supported</label>
    <nameField>
        <label>Other Organisations Supported Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Organisations Supported</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>