care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Philanthropic_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>