care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Philanthropic_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>