care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>