care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/fields/Interest_Description__c.field-meta.xml
<CustomField>
    <fullName>Interest_Description__c</fullName>
    <label>Interest Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>