care-australia-uat/force-app/main/default/objects/Other_Organisations_Supported__c/fields/RE_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_Legacy_ID__c</fullName>
    <description>Unique ID of RE source object row from Data Migration</description>
    <label>RE Legacy ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>